--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -6,17 +6,6 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
-import {
-  StructuredListWrapper,
-  StructuredListHead,
-  StructuredListBody,
-  StructuredListRow,
-  StructuredListInput,
-  StructuredListCell,
-  OrderedList,
-  ListItem,
-} from 'carbon-components-react';
-
 <PageDescription>
 
 Design annotations are needed for specific instances shown below, but for the standard data table component, Carbon already incorporates accessibility.
@@ -31,7 +20,7 @@ Design annotations are needed for specific instances shown below, but for the st
 
 ## What Carbon provides
 
-Carbon bakes keyboard operation into its components, as well as many other accessibility considerations.
+arbon bakes keyboard operation into its components, which improves the experiences of blind users and others who need to operate via the keyboard API. Carbon also incorporates many other accessibility considerations.
 
 ### Keyboard interaction
 
