--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -20,7 +20,7 @@ Design annotations are needed for specific instances shown below, but for the st
 
 ## What Carbon provides
 
-arbon bakes keyboard operation into its components, which improves the experiences of blind users and others who need to operate via the keyboard API. Carbon also incorporates many other accessibility considerations.
+Carbon bakes keyboard operation into its components, which improves the experiences of blind users and others who need to operate via the keyboard API. Carbon also incorporates many other accessibility considerations.
 
 ### Keyboard interaction
 
