--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -19,7 +19,7 @@ No accessibility annotations are needed for breadcrumbs, but keep these consider
 
 ## What Carbon provides
 
-Carbon bakes keyboard operation into its components, which improves the experiences of blind users and others who need to operate via the keyboard API. Carbon also incorporates many other accessibility considerations.
+Carbon bakes keyboard operation into its components, improving the experience of blind users and others who operate via the keyboard. Carbon incorporates many other accessibility considerations, some of which are described below.
 
 ### Keyboard interactions
 
