--- a/src/pages/components/button/accessibility.mdx
+++ b/src/pages/components/button/accessibility.mdx
@@ -39,7 +39,7 @@ Buttons can be reached by `Tab` and selected with `Space` or `Enter`.
 <Row>
 <Column colLg={8}>
 
-![example of button keyboard interaction](images/button-accessibility-2.png)
+![a pointer hovering over an icon-only button shows the name ‘Close’](images/button-accessibility-2.png)
 
 </Column>
 </Row>
@@ -49,7 +49,7 @@ Icon-only buttons have their labels exposed automatically on hover and focus.
 <Row>
 <Column colLg={8}>
 
-![example of button keyboard interaction](images/button-accessibility-3.png)
+![an activated button reveals 3 options in a menu](images/button-accessibility-3.png)
 
 </Column>
 </Row>
@@ -67,7 +67,7 @@ When buttons do not have a persistent label, they must be annotated with a label
 <Row>
 <Column colLg={8}>
 
-![example of button keyboard interaction](images/button-accessibility-4.png)
+![a button with a pencil icon has an annotation ‘label=Rename’](images/button-accessibility-4.png)
 
 </Column>
 </Row>
