--- a/src/pages/components/accordion/accessibility.mdx
+++ b/src/pages/components/accordion/accessibility.mdx
@@ -85,7 +85,7 @@ Annotate if the accordion chevrons should be left-aligned.
 
 ## Developer considerations
 
-Keep these considerations in mind if you’re modifying Carbon or creating a custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
 * The accordion header has a role of `<button>`, with an `aria-expanded` attribute set to `"true"` or `"false"`.
 * The button has an `aria-controls` property set to the unique id of the panel it controls.
