--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -8,7 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-No accessibility annotations are needed for breadcrumbs, but keep these considerations in mind if you’re modifying Carbon or creating a custom component.
+No accessibility annotations are needed for breadcrumbs, but keep these considerations in mind if you are modifying Carbon or creating a custom component.
 
 </PageDescription>
 
@@ -51,7 +51,7 @@ Carbon provides the accessibility information about the breadcrumb's structure.
 
 ## Developer considerations
 
-Keep these considerations in mind if you’re modifying Carbon or creating a custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
 * The Carbon implementation uses an html5 `<nav>` element; this could also be achieved with a “navigation” landmark on a `<div>`.
 * Each link in the breadcrumb is implemented as an unordered list item so that screen readers provide more context.
