--- a/src/pages/components/button/accessibility.mdx
+++ b/src/pages/components/button/accessibility.mdx
@@ -76,7 +76,7 @@ Annotate the label for icon-only buttons so the proper tooltip appears.
 
 ## Developer considerations
 
-Keep these considerations in mind if you’re modifying Carbon or creating a custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
 * Where links have been ‘repurposed’ as a button, they need to be coded so the `Space` key can also activate (since links are only activated by default by `Enter`).
 * Toggle buttons can be accessibility supported by changing the value of `aria-pressed` between `"true"` and `"false"` or with a change of name that
