--- a/src/pages/components/checkbox/accessibility.mdx
+++ b/src/pages/components/checkbox/accessibility.mdx
@@ -68,7 +68,7 @@ Annotate if there is meaningful navigation order in rows of checkboxes.
 
 ## Developer considerations
 
-Keep these considerations in mind if you’re modifying Carbon or creating a custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
 * Checkboxes are grouped using `<fieldset>` and `<legend>`.
 * A tri-state checkbox that is partially checked (indeterminate) has `aria-checked` set to `"mixed"`. See [Behaviors](https://carbondesignsystem.com/components/checkbox/usage/#behaviors) on the Usage tab for details.
