--- a/src/pages/components/slider/accessibility.mdx
+++ b/src/pages/components/slider/accessibility.mdx
@@ -8,7 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-No accessibility annotations are needed for sliders, but keep these considerations in mind if you’re modifying Carbon or creating a custom component.
+No accessibility annotations are needed for sliders, but keep these considerations in mind if you are modifying Carbon or creating a custom component.
 
 </PageDescription>
 
@@ -59,7 +59,7 @@ The input value and slider position are in sync. An update to either causes the 
 
 ## Developer considerations
 
-Keep these considerations in mind if you’re modifying Carbon or creating a custom component:
+Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
 * The `step` value determines the change increment when moving the slider, either by pointer or keyboard. A value of `"1"` is recommended.
 * The `stepMultiplier` determines the value change when the keyboard is used to alter the slider by pressing `Shift`+ Arrow key. A tenth of the total range is recommended as a value, such as `"10"` in a 0-100 slider.
